Update rebar version and fix rebar.config path to boss

--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,5 @@
 {deps, [
-  {boss, ".*", {git, "git://github.com/evanmiller/ChicagoBoss.git", "HEAD"}},
+  {boss, ".*", {git, "git://github.com/ChicagoBoss/ChicagoBoss.git", {branch, "master"}}},
   {social, ".*", {git, "git://github.com/dvv/social.git", "HEAD"}},
   {cb_admin, ".*", {git, "git://github.com/ChicagoBoss/cb_admin.git", "HEAD"}}
 ]}.
