--- a/boss.config
+++ b/boss.config
@@ -10,7 +10,7 @@
 %%% "boss.test.config" which, if present, will be read instead of boss.config.
 
 [{boss, [
-    {path, "/home/mithereal/ChicagoBoss-0.8.10"},
+    {path, "./deps/boss"},
     {applications, [resumeretard,cb_admin]},
     {assume_locale, "en"},
 
