--- a/rebar.config
+++ b/rebar.config
@@ -6,4 +6,4 @@
 {plugin_dir, ["priv/rebar"]}.
 {plugins, [boss_plugin]}.
 {eunit_compile_opts, [{src_dirs, ["src/test"]}]}.
-{lib_dirs, ["/home/mithereal/ChicagoBoss-0.8.10/deps/elixir/lib"]}.
+{lib_dirs, ["../ChicagoBoss/deps/elixir/lib"]}.
