--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,8 @@
 {deps, [
   {boss, ".*", {git, "git://github.com/ChicagoBoss/ChicagoBoss.git", {branch, "master"}}},
   {social, ".*", {git, "git://github.com/dvv/social.git", "HEAD"}},
-  {cb_admin, ".*", {git, "git://github.com/ChicagoBoss/cb_admin.git", "HEAD"}}
+  {cb_admin, ".*", {git, "git://github.com/ChicagoBoss/cb_admin.git", "HEAD"}},
+  {bcrypt, ".*", {git, "https://github.com/opscode/erlang-bcrypt.git", "HEAD"}}
 ]}.
 {plugin_dir, ["priv/rebar"]}.
 {plugins, [boss_plugin]}.
