--- a/boss.config
+++ b/boss.config
@@ -27,7 +27,8 @@
 %%   spawn. Defaults to 32768 (the usual system default).
 
 %    {vm_cookie, "secret"},
-%    {vm_name, "leader"},
+%    {vm_name, "leader@localhost"}
+%    {vm_sname, "shortname"},
 %    {vm_max_processes, 32768},
 
 %%%%%%%%%%%%%%
